--- a/src/administration/client/templates/client/productrating_form.html
+++ b/src/administration/client/templates/client/productrating_form.html
@@ -12,9 +12,11 @@
                     <div class="tab-content">
                         <div class="tab-pane fade show active" id="tab_dashboard" role="tabpanel">
                             <div class="total_revenue aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
+
                                 <div class="vd_title_wrap">
                                     <h3>Add Review</h3>
                                 </div>
+                                <div></div>
                                 <div class="row">
                                     <div class="col-sm-12 m-2">
                                         <div class="card">
