--- a/src/administration/client/templates/client/include/dashboard_navbar.html
+++ b/src/administration/client/templates/client/include/dashboard_navbar.html
@@ -40,6 +40,12 @@
                 </a>
             </li>
             <li>
+                <a href="{% url 'client:address' %}" {% if request.path == '/c/my-address/' %}class="active"
+                   aria-selected="true"{% endif %}>
+                    My Address
+                </a>
+            </li>
+            <li>
                 <a href="{% url 'client:reviews' %}" {% if request.path == '/c/reviews/' %}class="active"
                    aria-selected="true"{% endif %}>
                     Reviews
