--- a/src/website/templates/website/about.html
+++ b/src/website/templates/website/about.html
@@ -1,151 +1,208 @@
 {% extends  'website/base.html' %}
 {% load static %}
 {% block content %}
-<section class="vendor_section sec_space_small aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
-            <div class="container">
-               <div class="vendor_image">
-                  <img src="{% static 'website/images/backgrounds/about.png' %}" alt="image_not_found">
-               </div>
-               <h2 class="title_text">
-                  Start Your Business With Multikart &amp; Reach Customers Across The
-                  World...
-               </h2>
-               <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                  accusantium doloremque laudantium,
-               </p>
-               <p class="mb-0">
-                  On the other hand, we denounce with righteous indignation and
-                  dislike men who are so beguiled and demoralized by the charms of
-                  pleasure of the moment, so blinded by desire, that they cannot
-                  foresee the pain and trouble that are bound to ensue; and equal
-                  blame belongs to those who fail in their duty through weakness of
-                  will, which is the same as saying through shrinking from toil and
-                  pain. These cases are perfectly simple and easy to distinguish. In
-                  a free hour, when our power of choice is untrammelled and when
-                  nothing prevents our being able to do what we like best, every
-                  pleasure is to be welcomed and every pain avoided. But in certain
-                  circumstances and owing to the claims of duty or the obligations
-                  of business it will frequently occur that pleasures have to be
-                  repudiated and annoyances accepted. The wise man therefore always
-                  holds in these matters to this principle of selection: he rejects
-                  pleasures to secure other greater pleasures, or else he endures
-                  pains to avoid worse pains.
-               </p>
-               <div class="row">
-                  <div class="col col-lg-3 col-md-6 col-sm-6">
-                     <div class="vendor_service_item aos-init aos-animate" data-aos="fade-up" data-aos-duration="500">
-                        <div class="item_icon" style="
-                      background-image: url('{% static 'website/images/services/service18.png' %});
-                    ">
-                           <img src="{% static 'website/images/services/service19.png' %}" alt="image_not_found">
-                        </div>
-                        <div class="item_content">
-                           <h3 class="item_title">LOWEST COST</h3>
-                           <p class="mb-0">
-                              Sed ut perspiciatis unde omnis iste natus error sit
-                              voluptatem
-                           </p>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="col col-lg-3 col-md-6 col-sm-6">
-                     <div class="vendor_service_item aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
-                        <div class="item_icon" style="
-                      background-image: url('{% static 'website/images/services/service18.png' %});
-                    ">
-                           <img src="{% static 'website/images/services/service20.png' %}" alt="image_not_found">
-                        </div>
-                        <div class="item_content">
-                           <h3 class="item_title">HIGH GROWTH RATE</h3>
-                           <p class="mb-0">
-                              Sed ut perspiciatis unde omnis iste natus error sit
-                              voluptatem
-                           </p>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="col col-lg-3 col-md-6 col-sm-6">
-                     <div class="vendor_service_item aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
-                        <div class="item_icon" style="
-                      background-image: url('{% static 'website/images/services/service18.png' %}');
-                    ">
-                           <img src="{% static 'website/images/services/service21.png' %}" alt="image_not_found">
-                        </div>
-                        <div class="item_content">
-                           <h3 class="item_title">DEDICATED PICKUP</h3>
-                           <p class="mb-0">
-                              Sed ut perspiciatis unde omnis iste natus error sit
-                              voluptatem
-                           </p>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="col col-lg-3 col-md-6 col-sm-6">
-                     <div class="vendor_service_item aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
-                        <div class="item_icon" style="
-                      background-image: url('{% static 'website/images/services/service18.png' %}');
-                    ">
-                           <img src="{% static 'website/images/services/service22.png' %}" alt="image_not_found">
-                        </div>
-                        <div class="item_content">
-                           <h3 class="item_title">MOST APPROACHABLE</h3>
-                           <p>
-                              Sed ut perspiciatis unde omnis iste natus error sit
-                              voluptatem
-                           </p>
-                        </div>
-                     </div>
-                  </div>
-               </div>
+    <section class="vendor_section sec_space_small aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
+        <div class="container">
+            <div class="vendor_image">
+                <img src="{% static 'website/images/backgrounds/about.png' %}" alt="image_not_found">
             </div>
-         </section>
+            <h2 class="title_text">
+                Start Your Business With Multikart &amp; Reach Customers Across The
+                World...
+            </h2>
+            <p>
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                accusantium doloremque laudantium,
+            </p>
+            <p class="mb-0">
+                On the other hand, we denounce with righteous indignation and
+                dislike men who are so beguiled and demoralized by the charms of
+                pleasure of the moment, so blinded by desire, that they cannot
+                foresee the pain and trouble that are bound to ensue; and equal
+                blame belongs to those who fail in their duty through weakness of
+                will, which is the same as saying through shrinking from toil and
+                pain. These cases are perfectly simple and easy to distinguish. In
+                a free hour, when our power of choice is untrammelled and when
+                nothing prevents our being able to do what we like best, every
+                pleasure is to be welcomed and every pain avoided. But in certain
+                circumstances and owing to the claims of duty or the obligations
+                of business it will frequently occur that pleasures have to be
+                repudiated and annoyances accepted. The wise man therefore always
+                holds in these matters to this principle of selection: he rejects
+                pleasures to secure other greater pleasures, or else he endures
+                pains to avoid worse pains.
+            </p>
+            <div class="row">
+                <div class="col col-lg-3 col-md-6 col-sm-6">
+                    <div class="vendor_service_item aos-init aos-animate" data-aos="fade-up" data-aos-duration="500">
+                        <div class="item_icon" style="
+                                background-image: url('{% static 'website/images/services/service18.png' %});
+                                ">
+                            <img src="{% static 'website/images/services/service19.png' %}" alt="image_not_found">
+                        </div>
+                        <div class="item_content">
+                            <h3 class="item_title">LOWEST COST</h3>
+                            <p class="mb-0">
+                                Sed ut perspiciatis unde omnis iste natus error sit
+                                voluptatem
+                            </p>
+                        </div>
+                    </div>
+                </div>
 
-    <section class="work_process_section sec_space_small pb-0 aos-init aos-animate" style="background-image: url('{% static 'website/images/backgrounds/bg10.png' %}')" data-aos="fade-up" data-aos-duration="2000">
-            <div class="container">
-               <div class="row justify-content-center">
-                  <div class="col col-lg-5">
-                     <div class="section_title text-center">
+                <div class="col col-lg-3 col-md-6 col-sm-6">
+                    <div class="vendor_service_item aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
+                        <div class="item_icon" style="
+                                background-image: url('{% static 'website/images/services/service18.png' %});
+                                ">
+                            <img src="{% static 'website/images/services/service20.png' %}" alt="image_not_found">
+                        </div>
+                        <div class="item_content">
+                            <h3 class="item_title">HIGH GROWTH RATE</h3>
+                            <p class="mb-0">
+                                Sed ut perspiciatis unde omnis iste natus error sit
+                                voluptatem
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col col-lg-3 col-md-6 col-sm-6">
+                    <div class="vendor_service_item aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
+                        <div class="item_icon" style="
+                                background-image: url('{% static 'website/images/services/service18.png' %}');
+                                ">
+                            <img src="{% static 'website/images/services/service21.png' %}" alt="image_not_found">
+                        </div>
+                        <div class="item_content">
+                            <h3 class="item_title">DEDICATED PICKUP</h3>
+                            <p class="mb-0">
+                                Sed ut perspiciatis unde omnis iste natus error sit
+                                voluptatem
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col col-lg-3 col-md-6 col-sm-6">
+                    <div class="vendor_service_item aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
+                        <div class="item_icon" style="
+                                background-image: url('{% static 'website/images/services/service18.png' %}');
+                                ">
+                            <img src="{% static 'website/images/services/service22.png' %}" alt="image_not_found">
+                        </div>
+                        <div class="item_content">
+                            <h3 class="item_title">MOST APPROACHABLE</h3>
+                            <p>
+                                Sed ut perspiciatis unde omnis iste natus error sit
+                                voluptatem
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="team_inner_content mb-4">
+        <div class="container">
+            <h2 class="title_text text-center">
+                Our Team Members Detail
+            </h2>
+            <div class="card-group justify-content-center align-items-center">
+
+                <div class="team_content_wrap position-relative col-md-10 col-lg-8 col-xl-12 m-auto">
+                    <div class="row g-4">
+                        {% if team %}
+                            {% for object in team %}
+                                <div class="col-sm-6 col-md-6 col-xl-3">
+                                    <div class="card team_content text-center aos-init aos-animate" data-aos="fade-left"
+                                         data-aos-duration="2000">
+                                        <img class="rounded-pill" src="{{ object.image.url }}" alt="team3">
+                                        <div class="card-body team_author_content">
+                                            <h4 class="card-text team_author_post mb-2">{{ object.name }}</h4>
+                                            <h3 class="card-text team_author_post mb-2 text-warning">{{ object.rank }}</h3>
+                                            <div class="team_author_social_link d-flex justify-content-center justify-content-around align-items-center">
+                                                <a class="text-warning social_twitt" href="
+
+                                                        {% if object.twitter_link %}{{ object.twitter_link }}{% else %}javascript:void(0){% endif %}">
+                                                    <i class="fab fa-twitter"></i>
+                                                </a>
+                                                <a class="text-warning social_twitt" href="
+
+                                                        {% if object.facebook_link %}{{ object.twitter_link }}{% else %}javascript:void(0){% endif %}">
+                                                    <i class="fab fa-facebook-square"></i>
+                                                </a>
+                                                <a class="text-warning social_twitt" href="
+
+                                                        {% if object.linkedin_link %}{{ object.twitter_link }}{% else %}javascript:void(0){% endif %}">
+                                                    <i class="fab fa-linkedin"></i>
+                                                </a>
+                                                <a class="text-warning social_twitt" href="
+
+                                                        {% if object.instagram_link %}{{ object.twitter_link }}{% else %}javascript:void(0){% endif %}">
+                                                    <i class="fab fa-instagram"></i>
+                                                </a>
+                                                <a class="text-warning social_twitt" href="
+
+                                                        {% if object.youtube_link %}{{ object.twitter_link }}{% else %}javascript:void(0){% endif %}">
+                                                    <i class="fab fa-youtube"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% else %}
+                            <span class="text-danger">Teams Are Not Added Yet</span>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="work_process_section sec_space_small pb-0 "
+             style="background-image: url('{% static 'website/images/backgrounds/bg10.png' %}')"
+             >
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col col-lg-5">
+                    <div class="section_title text-center">
                         <h2 class="title_text mb-0">
-                           Doing Business On Vendor Is Really Easy
+                            Doing Business On Vendor Is Really Easy
                         </h2>
-                     </div>
-                  </div>
-               </div>
-               <div class="row">
-                  <div class="col col-lg-4">
-                     <div class="work_process_item aos-init" style="
-                    background-image: url('{% static 'website/images/vendor/vendor_bg_1.png' %}');
-                  " data-aos="fade-up" data-aos-duration="1000">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-lg-4">
+                    <div class="work_process_item " style="
+                            background-image: url('{% static 'website/images/vendor/vendor_bg_1.png' %}');
+                            " >
                         <div class="item_icon">1</div>
                         <h3 class="item_ttile">
-                           List Your Products &amp; Get Support Service Provider
+                            List Your Products &amp; Get Support Service Provider
                         </h3>
-                     </div>
-                  </div>
-                  <div class="col col-lg-4">
-                     <div class="work_process_item aos-init" style="
-                    background-image: url('{% static 'website/images/vendor/vendor_bg_2.png' %}');
-                  " data-aos="fade-up" data-aos-duration="1500">
+                    </div>
+                </div>
+                <div class="col col-lg-4">
+                    <div class="work_process_item " style="
+                            background-image: url('{% static 'website/images/vendor/vendor_bg_2.png' %}');
+                            ">
                         <div class="item_icon">2</div>
                         <h3 class="item_ttile">Receive Orders &amp; Schedule A Pickup</h3>
-                     </div>
-                  </div>
-                  <div class="col col-lg-4">
-                     <div class="work_process_item aos-init" style="
-                    background-image: url('{% static 'website/images/vendor/vendor_bg_3.png' %}');
-                  " data-aos="fade-up" data-aos-duration="2000">
+                    </div>
+                </div>
+                <div class="col col-lg-4">
+                    <div class="work_process_item " style="
+                            background-image: url('{% static 'website/images/vendor/vendor_bg_3.png' %}');
+                            " >
                         <div class="item_icon">3</div>
                         <h3 class="item_ttile">
-                           Receive Quick Payment &amp; Grow Your Business
+                            Receive Quick Payment &amp; Grow Your Business
                         </h3>
-                     </div>
-                  </div>
-               </div>
+                    </div>
+                </div>
             </div>
-         </section>
-
+        </div>
+    </section>
 {% endblock content %}
