--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -62,6 +62,28 @@
 
 
 </div>
+
+<script>
+    var Tawk_API = Tawk_API || {};
+    var Tawk_LoadStart = new Date();
+
+    (function () {
+        var s1 = document.createElement("script");
+        var s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/66560d619a809f19fb364b4e/1hv028hlk';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+    })();
+</script>
+<script>
+// Add event listener for when the Tawk.to script has finished loading
+document.getElementById("Tawk_LoadStart").addEventListener("load", function () {
+    var chatButton = document.getElementById("chatButton");
+    chatButton.style.display = "none"; // This will hide the button
+});
+</script>
 <!-- body wrap end -->
 <script src="{% static 'website/js/jquery.min.js' %}"></script>
 <script src="{% static 'website/js/bootstrap.bundle.min.js' %}"></script>
