Feat:Issues Fixed

--- a/src/apps/razorpay/templates/razorpay/success.html
+++ b/src/apps/razorpay/templates/razorpay/success.html
@@ -121,7 +121,7 @@
                                     <div class="d-flex justify-content-between  p-3">
                                         <p>To Track The Delivery Of Your Order Is, My Account &gt; My Order</p>
                                         <p class="mb-0 text-warning">
-                                            <a href="{% url 'client:order_detail' object.id %}"
+                                            <a href="{% url 'client:order_detail' order.id %}"
                                                class="btn btn-warning text-white">View Order</a>
                                         </p>
                                     </div>
