--- a/src/administration/admins/templates/admins/order_invoice.html
+++ b/src/administration/admins/templates/admins/order_invoice.html
@@ -34,17 +34,43 @@
                     <hr class="my-4">
 
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-4">
                             <div class="text-muted">
                                 <h5 class="font-size-16 mb-3">Billed To:</h5>
                                 <h5 class="font-size-15 mb-2">{{ object.full_name }}</h5>
-                                <p class="mb-1">{{ object.address }}</p>
+                                <p class="mb-1">{{ object.address }}, {{ object.city }}
+                                    ,{{ object.state }}, {{ object.country }}
                                 <p class="mb-1">{{ object.email }}</p>
-                                <p>{{ object.contact }}</p>
+                                <p class="mb-1">{{ object.contact }}</p>
+                                {% if object.gst_in %}
+                                    <p class="mb-1">CSGT: {{ object.gst_in }}</p>
+                                {% endif %}
+                            </div>
+                        </div>
+
+                        <div class="col-sm-4">
+                            <div class="text-muted">
+                                <h5 class="font-size-16 mb-3">Billed By:</h5>
+
+                                Billed By
+                                <h5>j h webtech</h5>
+                                <p class="m-0">185, karannagar (G.H.B, Sanand - Nalsarovar Rd, Ahmedabad, Gujarat
+                                    382110,</p>
+                                <p class="m-0">Ahmedabad,</p>
+                                <p class="m-0">Gujarat, India - 382110</p>
+                                <p class="m-0">GSTIN: 24APVPJ6817J1ZC</p>
+                                <p class="m-0">PAN: APVPJ6817J</p>
+                                <p class="m-0">Email: jhwebtech2016@gmail.com</p>
+                                <p class="m-0">Phone: +91 70417 17178</p>
+                                <p class="m-0">Bank Name: Bank Of Baroda</p>
+                                <p class="m-0">Bank Account No: 31030200001599</p>
+                                <p class="m-0">IFSC Code: BARB0SANAND</p>
                             </div>
                         </div>
                         <!-- end col -->
-                        <div class="col-sm-6">
+
+                        <!-- end col -->
+                        <div class="col-sm-4">
                             <div class="text-muted text-sm-end">
                                 <div>
                                     <h5 class="font-size-15 mb-1">Invoice No:</h5>
@@ -111,7 +137,7 @@
                                 <!-- end tr -->
                                 <tr>
                                     <th scope="row" colspan="4" class="border-0 text-end">
-                                        Tax  :
+                                        Tax :
                                     </th>
                                     <td class="border-0 text-end">{{ object.tax }}</td>
                                 </tr>
