--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -1,22 +1,47 @@
-{% extends "socialaccount/base.html" %}
-
+{% extends "website/base.html" %}
+{% load crispy_forms_filters %}
+{% load static %}
+{% load socialaccount %}
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your {{provider_name}} account to login to
-{{site_name}}. As a final step, please complete the following form:{% endblocktrans %}</p>
+    <section class="login-page section-b-space">
+        <div class="container">
+            <div class="row justify-content-center my-4">
+                <div class="col-5 card my-4">
+                    <div class="theme-card">
+                        <div class="p-2">
 
-<form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+
+                            <p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are
+                                about to use your
+                                {{ provider_name }} account to login to
+                                {{ site_name }}. As a final step, please complete the following
+                                form:{% endblocktrans %}</p>
+
+                            <form class="signup" id="signup_form" method="post"
+                                  action="{% url 'socialaccount_signup' %}">
+                                {% csrf_token %}
+                                <div class="row p-2 mb-4 ">
+                                    {{ form|crispy }}
+                                    {% if redirect_field_value %}
+                                        <input type="hidden" name="{{ redirect_field_name }}"
+                                               value="{{ redirect_field_value }}"/>
+                                    {% endif %}
+                                    <button type="submit" style="background-color: #f5b23c" class="btn btn-sm ">Continue
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
 {% endblock %}
